--- a/example/example.vcxproj
+++ b/example/example.vcxproj
@@ -171,7 +171,7 @@
     <PostBuildEvent />
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\HelpBox.cpp" />
+    <ClCompile Include="..\src\ofxHelpBox.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ofApp.cpp" />
     <ClCompile Include="..\..\..\addons\ofxFontStash\src\ofxFontStash.cpp" />
@@ -183,7 +183,7 @@
     <ClCompile Include="..\..\..\addons\ofxXmlSettings\libs\tinyxmlparser.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\HelpBox.h" />
+    <ClInclude Include="..\src\ofxHelpBox.h" />
     <ClInclude Include="src\ofApp.h" />
     <ClInclude Include="..\..\..\addons\ofxFontStash\src\ofxFontStash.h" />
     <ClInclude Include="..\..\..\addons\ofxFontStash\libs\fontstash\src\fontstash.h" />
